--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>kitty</name>
+    <name>xjh</name>
 
     <modules>    <!-- 模组 -->
         <module>shop-startup</module>
+        <module>shop-dao</module>
+        <module>shop-common</module>
     </modules>
 
     <build>
@@ -134,170 +136,79 @@
         <plugin.springboot.version>2.4.1</plugin.springboot.version>
         <kotlin.version>1.4.30-M1</kotlin.version>
 
-        <start-class>book.LoginApp</start-class>
+        <start-class>com.xjh.startup.LoginApp</start-class>
 
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.kitty</groupId>
-                <artifactId>kitty-core</artifactId>
-                <version>${project.version}</version>
+                <groupId>com.xjh</groupId>
+                <artifactId>shop-startup</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>com.kitty</groupId>
-                <artifactId>kitty-backend</artifactId>
-                <version>${project.version}</version>
+                <groupId>com.xjh</groupId>
+                <artifactId>shop-dao</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+            <!--Java工具集合的依赖-->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>4.2.1</version>
+            </dependency>
+            <!--jdbc的mysql驱动依赖-->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>8.0.19</version>
+            </dependency>
+            <!--excel依赖-->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>3.17</version>
             </dependency>
             <dependency>
-                <groupId>com.kitty</groupId>
-                <artifactId>kitty-service</artifactId>
-                <version>${project.version}</version>
+                <groupId>xerces</groupId>
+                <artifactId>xercesImpl</artifactId>
+                <version>2.11.0</version>
             </dependency>
-            <dependency>
-                <groupId>com.kitty</groupId>
-                <artifactId>kitty-dao</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.kitty</groupId>
-                <artifactId>kitty-algorithm</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.kitty</groupId>
-                <artifactId>kitty-kt</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>QLExpress</artifactId>
-                <version>${QLExpress.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.hello.mercury</groupId>
-                <artifactId>mercury-iface</artifactId>
-                <version>${mercury.iface.version}</version>
-            </dependency>
+            <!--单元测试依赖-->
             <dependency>
                 <groupId>junit</groupId>
-                <artifactId>junit</artifactId>    <!-- 测试组件 -->
-                <version>4.13</version>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
                 <scope>test</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator图片处理类 -->
             <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>3.9</version>
-            </dependency>
-            <dependency>
-                <groupId>com.ctrip.framework.apollo</groupId>
-                <artifactId>apollo-client</artifactId>
-                <version>${apollo.client.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>1.4.199</version>
-            </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.10</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-                <version>2.1.0.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-jdbc</artifactId>
-                <version>5.2.2.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>5.2.2.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>5.2.3.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-beans</artifactId>
-                <version>5.2.2.RELEASE</version>
+                <groupId>net.coobird</groupId>
+                <artifactId>thumbnailator</artifactId>
+                <version>0.4.8</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>1.2.51</version>
+                <version>1.2.62</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-core</artifactId>
-                <version>2.13.0</version>
+                <groupId>com.jfoenix</groupId>
+                <artifactId>jfoenix</artifactId>
+                <version>8.0.10</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-api</artifactId>
-                <version>2.13.0</version>
+                <groupId>com.zaxxer</groupId>
+                <artifactId>HikariCP</artifactId>
+                <version>1.3.5</version>
             </dependency>
             <dependency>
-                <groupId>com.aliyun.oss</groupId>
-                <artifactId>aliyun-sdk-oss</artifactId>
-                <version>3.8.1</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>23.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.sleepycat</groupId>
-                <artifactId>je</artifactId>
-                <version>18.3.12</version>
-            </dependency>
-            <dependency>
-                <groupId>org.iq80.leveldb</groupId>
-                <artifactId>leveldb</artifactId>
-                <version>0.7</version>
-            </dependency>
-            <dependency>
-                <groupId>org.iq80.leveldb</groupId>
-                <artifactId>leveldb-api</artifactId>
-                <version>0.7</version>
-            </dependency>
-            <dependency>
-                <groupId>org.rocksdb</groupId>
-                <artifactId>rocksdbjni</artifactId>
-                <version>5.17.2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.xerial</groupId>
-                <artifactId>sqlite-jdbc</artifactId>
-                <version>3.34.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hsqldb</groupId>
-                <artifactId>hsqldb</artifactId>
-                <version>2.5.1</version>
+                <groupId>com.google.inject</groupId>
+                <artifactId>guice</artifactId>
+                <version>4.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-        </dependency>
-    </dependencies>
 
 </project>
