--- a/shop-service/pom.xml
+++ b/shop-service/pom.xml
@@ -2,18 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <groupId>com.xjh</groupId>
         <artifactId>xjh-parent</artifactId>
+        <groupId>com.xjh</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>shop-startup</artifactId>
+    <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>shop-service</artifactId>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
     <dependencies>
-        <!--Java工具集合的依赖-->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
@@ -58,10 +60,6 @@
         <dependency>
             <groupId>com.xjh</groupId>
             <artifactId>shop-dao</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.xjh</groupId>
-            <artifactId>shop-service</artifactId>
         </dependency>
     </dependencies>
 </project>
