--- a/shop-service/pom.xml
+++ b/shop-service/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>jfoenix</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.sleepycat</groupId>
+            <artifactId>je</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
         </dependency>
