--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,11 @@
                 <version>8.0.10</version>
             </dependency>
             <dependency>
+                <groupId>org.xerial</groupId>
+                <artifactId>sqlite-jdbc</artifactId>
+                <version>3.34.0</version>
+            </dependency>
+            <dependency>
                 <groupId>com.caucho</groupId>
                 <artifactId>hessian</artifactId>
                 <version>4.0.38</version>
