--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,11 @@
                 <version>18.3.12</version>
             </dependency>
             <dependency>
+                <groupId>org.rocksdb</groupId>
+                <artifactId>rocksdbjni</artifactId>
+                <version>5.17.2</version>
+            </dependency>
+            <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
                 <version>1.3.5</version>
