--- a/shop-common/pom.xml
+++ b/shop-common/pom.xml
@@ -33,6 +33,10 @@
             <groupId>com.sleepycat</groupId>
             <artifactId>je</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.rocksdb</groupId>
+            <artifactId>rocksdbjni</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
