--- a/shop-startup/pom.xml
+++ b/shop-startup/pom.xml
@@ -11,7 +11,6 @@
     </parent>
     <artifactId>shop-startup</artifactId>
 
-
     <dependencies>
         <!--Java工具集合的依赖-->
         <dependency>
@@ -64,4 +63,32 @@
             <artifactId>shop-service</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.xjh.startup.LoginApp</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
