--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,11 @@
                 <artifactId>guice</artifactId>
                 <version>4.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.java-websocket</groupId>
+                <artifactId>Java-WebSocket</artifactId>
+                <version>1.4.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
