--- a/shop-service/pom.xml
+++ b/shop-service/pom.xml
@@ -69,5 +69,10 @@
             <groupId>com.xjh</groupId>
             <artifactId>shop-dao</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
