--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,11 @@
                 <artifactId>Java-WebSocket</artifactId>
                 <version>1.4.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.18</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
