--- a/shop-startup/pom.xml
+++ b/shop-startup/pom.xml
@@ -62,6 +62,11 @@
             <groupId>com.xjh</groupId>
             <artifactId>shop-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
