--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.controlsfx</groupId>
+                <artifactId>controlsfx</artifactId>
+                <version>8.0.5</version>
+            </dependency>
+            <dependency>
                 <groupId>com.xjh</groupId>
                 <artifactId>shop-startup</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
