--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
                     <executions>
                         <execution>
                             <id>scala-compile</id>
+                            <phase>compile</phase>
                             <goals>
                                 <goal>compile</goal>
                                 <goal>testCompile</goal>
@@ -37,6 +38,21 @@
                             </configuration>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>    <!-- 编译插件 -->
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${plugin.compiler.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>compile</phase>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <source>${global.jdk.version}</source>
+                        <target>${global.jdk.version}</target>
+                        <encoding>${global.encoding}</encoding>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
@@ -61,16 +77,7 @@
                         </execution>
                     </executions>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>    <!-- 编译插件 -->
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${plugin.compiler.version}</version>
-                    <configuration>
-                        <source>${global.jdk.version}</source>
-                        <target>${global.jdk.version}</target>
-                        <encoding>${global.encoding}</encoding>
-                    </configuration>
-                </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>    <!-- 源码插件 -->
                     <artifactId>maven-source-plugin</artifactId>
