--- a/shop-startup/pom.xml
+++ b/shop-startup/pom.xml
@@ -68,6 +68,7 @@
     </dependencies>
 
     <build>
+        <finalName>shop-system-xjh</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -78,7 +79,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.xjh.startup.LoginApp</mainClass>
+                            <mainClass>${start-class}</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
