--- a/shop-common/pom.xml
+++ b/shop-common/pom.xml
@@ -46,6 +46,11 @@
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.17.1</version>
+        </dependency>
     </dependencies>
 
 </project>
