--- a/shop-common/pom.xml
+++ b/shop-common/pom.xml
@@ -51,6 +51,10 @@
             <artifactId>aliyun-sdk-oss</artifactId>
             <version>3.17.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
